<resources>
    <string name="error_generic">An error occurred.</string>
    <string name="error_network">A network error occurred. Please check your connection and try again.</string>
    <string name="error_empty">This cannot be empty.</string>
    <string name="error_invalid_domain">Invalid domain entered</string>
    <string name="error_failed_app_registration">Failed authenticating with that instance. If this persists, try "Login in Browser" from the menu.</string>
    <string name="error_no_web_browser_found">Couldn\'t find a web browser to use.</string>
    <string name="error_authorization_unknown">An unidentified authorization error occurred. If this persists, try "Login in Browser" from the menu.</string>
    <string name="error_authorization_denied">Authorization was denied. If you\'re sure that you supplied the correct credentials, try "Login in Browser" from the menu.</string>
    <string name="error_retrieving_oauth_token">Failed getting a login token. If this persists, try "Login in Browser" from the menu.</string>
    <string name="error_loading_account_details">Failed loading account details</string>
    <string name="error_could_not_load_login_page">Could not load the login page.</string>
    <string name="error_compose_character_limit">The post is too long!</string>
    <string name="error_multimedia_size_limit">Video and audio files cannot exceed %1$s MB in size.</string>
    <string name="error_image_edit_failed">The image could not be edited.</string>
    <string name="error_media_upload_type">That type of file cannot be uploaded.</string>
    <string name="error_media_upload_opening">That file could not be opened.</string>
    <string name="error_media_upload_permission">Permission to read media is required.</string>
    <string name="error_media_download_permission">Permission to store media is required.</string>
    <string name="error_media_upload_image_or_video">Images and videos cannot both be attached to the same post.</string>
    <string name="error_media_upload_sending">The upload failed.</string>
    <string name="error_media_upload_sending_fmt">The upload failed: %1$s</string>
    <string name="error_sender_account_gone">Error sending post.</string>
    <string name="error_following_hashtag_format">Error following #%1$s</string>
    <string name="error_unfollowing_hashtag_format">Error unfollowing #%1$s</string>
    <string name="error_following_hashtags_unsupported">This instance does not support following hashtags.</string>
    <string name="error_muting_hashtag_format">Error muting #%1$s</string>
    <string name="error_unmuting_hashtag_format">Error unmuting #%1$s</string>
    <string name="error_blocking_domain">Failed to mute %1$s: %2$s</string>
    <string name="error_unblocking_domain">Failed to unmute %1$s: %2$s</string>
    <string name="error_status_source_load">Failed to load the status source from the server.</string>
    <string name="error_deleting_filter">Error deleting filter \'%1$s\'</string>
    <string name="error_saving_filter">Error saving filter \'%1$s\'</string>
    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_public_local">Local</string>
    <string name="title_public_trending_hashtags">Trending hashtags</string>
    <string name="title_public_trending_statuses">Trending posts</string>
    <string name="title_public_federated">Federated</string>
    <string name="title_direct_messages">Direct messages</string>
    <string name="title_tab_preferences">Tabs</string>
    <string name="title_view_thread">Thread</string>
    <string name="title_posts">Posts</string>
    <string name="title_posts_with_replies">With replies</string>
    <string name="title_posts_pinned">Pinned</string>
    <string name="title_follows">Follows</string>
    <string name="title_followers">Followers</string>
    <string name="title_favourites">Favorites</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_mutes">Muted users</string>
    <string name="title_blocks">Blocked users</string>
    <string name="title_domain_mutes">Hidden domains</string>
    <string name="title_follow_requests">Follow requests</string>
    <string name="title_edit_profile">Edit your profile</string>
    <string name="title_drafts">Drafts</string>
    <string name="title_scheduled_posts">Scheduled posts</string>
    <string name="title_announcements">Announcements</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_followed_hashtags">Followed hashtags</string>
    <string name="title_edits">Edits</string>
    <string name="dialog_follow_hashtag_title">Follow hashtag</string>
    <string name="follow_hashtag_success">Followed hashtag %1$s</string>
    <string name="post_username_format">\@%1$s</string>
    <string name="post_boosted_format">%1$s boosted</string>
    <string name="post_boosted_unlisted_format">%1$s boosted (Unlisted)</string>
    <string name="post_boosted_private_format">%1$s boosted (Followers-Only)</string>
    <string name="post_replied">Replied</string>
    <string name="post_replied_format">In reply to %1$s</string>
    <string name="post_replied_self">Continued thread</string>
    <string name="post_sensitive_media_title">Sensitive content</string>
    <string name="post_media_hidden_title">Media hidden</string>
    <string name="post_media_alt">ALT</string>
    <string name="post_sensitive_media_directions">Click to view</string>
    <string name="post_content_warning_show_more">Show more</string>
    <string name="post_content_warning_show_less">Show less</string>
    <string name="post_content_show_more">Expand</string>
    <string name="post_content_show_less">Collapse</string>
    <string name="post_edited">Edited %1$s</string>
    <string name="message_empty">Nothing here.</string>
    <string name="footer_empty">Nothing here. Pull down to refresh!</string>
    <string name="notification_reblog_format">%1$s boosted your post</string>
    <string name="notification_favourite_format">%1$s favorited your post</string>
    <string name="notification_follow_format">%1$s followed you</string>
    <string name="notification_follow_request_format">%1$s requested to follow you</string>
    <string name="notification_sign_up_format">%1$s signed up</string>
    <string name="notification_subscription_format">%1$s just posted</string>
    <string name="notification_update_format">%1$s edited their post</string>
    <string name="notification_report_format">New report on %1$s</string>
    <string name="notification_header_report_format">%1$s reported %2$s</string>
    <string name="notification_summary_report_format">%1$s · %2$d posts attached</string>
    <string name="report_username_format">Report @%1$s</string>
    <string name="report_comment_hint">Additional comments?</string>
    <string name="action_quick_reply">Quick Reply</string>
    <string name="action_reply">Reply</string>
    <string name="action_reblog">Boost</string>
    <string name="action_reblog_private">Followers-Only Boost</string>
    <string name="action_reblog_public">Public Boost</string>
    <string name="action_reblog_unlisted">Unlisted Boost</string>
    <string name="action_unreblog">Remove boost</string>
    <string name="action_favourite">Favorite</string>
    <string name="action_unfavourite">Remove favorite</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_unbookmark">Remove bookmark</string>
    <string name="action_more">More</string>
    <string name="action_compose">Compose</string>
    <string name="action_login">Login with Tusky</string>
    <string name="action_browser_login">Login with Browser</string>
    <string name="action_logout">Log out</string>
    <string name="action_logout_confirm">Are you sure you want to log out of %1$s? This will delete all local data of the account, including drafts and preferences.</string>
    <string name="action_post_failed">Upload failed</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_block">Block</string>
    <string name="action_share_account_link">Share link to account</string>
    <string name="action_share_account_username">Share username of account</string>
    <string name="action_hide_reblogs">Hide boosts</string>
    <string name="action_report">Report</string>
    <string name="action_delete">Delete</string>
    <string name="action_view_profile">Profile</string>
    <string name="action_view_preferences">Preferences</string>
    <string name="action_view_favourites">Favorites</string>
    <string name="action_view_mutes">Muted users</string>
    <string name="action_view_blocks">Blocked users</string>
    <string name="action_open_in_web">Open in browser</string>
    <string name="action_share">Share</string>
    <string name="action_mute">Mute</string>
    <string name="action_unmute">Unmute</string>
    <string name="action_mute_domain">Mute %1$s</string>
    <string name="action_save">Save</string>
    <string name="action_copy_link">Copy the link</string>
    <string name="action_open_as">Open as %1$s</string>
    <string name="dialog_mute_warning">Mute @%1$s?</string>
    <string name="dialog_mute_hide_notifications">Hide notifications</string>
    <string name="visibility_public">Public: Post to public timelines</string>
    <string name="visibility_unlisted">Unlisted: Do not show in public timelines</string>
    <string name="visibility_private">Followers-Only: Post to followers only</string>
    <string name="visibility_direct">Direct: Post to mentioned users only</string>
    <string name="pref_title_edit_notification_settings">Notifications</string>
    <string name="pref_title_timelines">Timelines</string>
    <string name="pref_title_show_boosts">Show boosts</string>
    <string name="pref_title_show_replies">Show replies</string>
    <string name="pref_title_show_media_preview">Download media previews</string>
    <string name="pref_title_http_proxy_settings">HTTP proxy</string>
    <string name="pref_title_http_proxy_enable">Enable HTTP proxy</string>
    <string name="pref_title_http_proxy_server">HTTP proxy server</string>
    <string name="pref_title_http_proxy_port">HTTP proxy port</string>
    <string name="pref_default_post_privacy">Post privacy (synced with server)</string>
    <string name="pref_default_media_sensitivity">Always mark media as sensitive (synced with server)</string>
    <string name="pref_publishing">Posting defaults</string>
    <string name="pref_title_alway_show_sensitive_media">Always show sensitive media</string>
    <string name="filter_dialog_whole_word">Whole word</string>
    <string name="filter_dialog_whole_word_description">When the keyword or phrase is alphanumeric only, it will only be applied if it matches the whole word</string>
    <string name="filter_add_description">Phrase to filter</string>
    <string name="action_add_or_remove_from_list">Add or remove from list</string>
    <string name="reblog_private">Boost to original audience</string>
    <string name="unreblog_private">Unboost</string>
    <string name="label_duration">Duration</string>
    <string name="action_refresh">Refresh</string>
    <string name="hint_filter_title">My filter</string>
    <string name="label_filter_title">Title</string>
    <string name="label_filter_action">Filter action</string>
    <string name="label_filter_context">Filter contexts</string>
    <string name="label_filter_keywords">Keywords or phrases to filter</string>
    <string name="action_add">Add</string>
</resources>