<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_open_in_web"
        android:title="@string/action_open_in_web"
        app:showAsAction="never" />

    <item android:id="@+id/action_open_as"
        android:title="@string/action_open_as"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_account_share"
        android:title="@string/action_share">
        <menu>
            <item
                android:id="@+id/action_share_account_link"
                android:title="@string/action_share_account_link" />
            <item
                android:id="@+id/action_share_account_username"
                android:title="@string/action_share_account_username" />
        </menu>
    </item>

    <item android:id="@+id/action_mute"
        android:title="@string/action_mute"
        app:showAsAction="never" />

    <item android:id="@+id/action_block"
        android:title="@string/action_block"
        app:showAsAction="never" />

    <item android:id="@+id/action_add_or_remove_from_list"
        android:title="@string/action_add_or_remove_from_list"
        app:showAsAction="never" />

    <item android:id="@+id/action_mute_domain"
        android:title="@string/action_mute_domain"
        app:showAsAction="never" />

    <item android:id="@+id/action_show_reblogs"
        android:title="@string/action_hide_reblogs"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report"
        android:title="@string/action_report" />
</menu>
