<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/status_share"
        android:title="@string/action_share">
        <menu>
            <item
                android:id="@+id/status_share_link"
                android:title="@string/status_share_link" />
            <item
                android:id="@+id/status_share_content"
                android:title="@string/status_share_content"/>
        </menu>
    </item>
    <item android:title="@string/action_copy_link"
        android:id="@+id/status_copy_link" />
    <item android:title="@string/action_mute"
        android:id="@+id/status_mute" />
    <item android:title="@string/action_block"
        android:id="@+id/status_block" />
    <item android:title="@string/action_report"
        android:id="@+id/status_report" />
</menu>