<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_profile"
        android:title="@string/action_view_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_preferences"
        android:title="@string/action_view_preferences"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_favourites"
        android:title="@string/action_view_favourites"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_blocks"
        android:title="@string/action_view_blocks"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
