<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_follow_hashtag"
        android:title="@string/action_follow"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface"
        android:icon="@drawable/ic_person_add_24dp_mirrored" />

    <item
        android:id="@+id/action_unfollow_hashtag"
        android:title="@string/action_unfollow"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface"
        android:icon="@drawable/ic_person_remove_24dp_mirrored" />

    <item
        android:id="@+id/action_mute_hashtag"
        android:title="@string/action_mute"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface"
        android:icon="@drawable/ic_volume_off_24dp" />

    <item
        android:id="@+id/action_unmute_hashtag"
        android:title="@string/action_unmute"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface"
        android:icon="@drawable/ic_volume_up_24dp" />

</menu>
