<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/pref_title_status_tabs">

    <com.keylesspalace.tusky.view.UnclickablePreferenceCategory
        android:title="@string/title_home"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="tabFilterHomeBoosts"
            android:title="@string/pref_title_show_boosts"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="tabFilterHomeReplies"
            android:title="@string/pref_title_show_replies"
            app:iconSpaceReserved="false" />
    </com.keylesspalace.tusky.view.UnclickablePreferenceCategory>
</androidx.preference.PreferenceScreen>