<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="android.widget.LinearLayout">

    <RadioGroup
        android:id="@+id/visibilityRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/compose_options_margin"
        android:layout_marginLeft="@dimen/compose_options_margin"
        android:layout_marginRight="@dimen/compose_options_margin"
        android:layout_marginTop="4dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/publicRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/visibility_public"
            android:textColor="?android:textColorTertiary"
            app:buttonTint="?attr/compound_button_color" />

        <RadioButton
            android:id="@+id/unlistedRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/visibility_unlisted"
            android:textColor="?android:textColorTertiary"
            app:buttonTint="?attr/compound_button_color" />

        <RadioButton
            android:id="@+id/privateRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/visibility_private"
            android:textColor="?android:textColorTertiary"
            app:buttonTint="?attr/compound_button_color" />

        <RadioButton
            android:id="@+id/directRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:paddingEnd="0dp"
            android:paddingStart="10dp"
            android:text="@string/visibility_direct"
            android:textColor="?android:textColorTertiary"
            app:buttonTint="?attr/compound_button_color" />

    </RadioGroup>

</merge>